Remove subcategory and period
